--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script src="https://cdn.babylonjs.com/viewer/babylon.viewer.js"></script>
 </head>
 <body>
-    <babylon model="scene.babylon"></babylon>
+    <babylon model="https://raw.githubusercontent.com/dernorbi/babTest2/main/scene.babylon"></babylon>
 </body>
 </html>
