--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       const engine = new BABYLON.Engine(canvas, true); // Generate the BABYLON 3D engine
 
       // Add your code here matching the playground format
-	function createScene() {
+const createScene = ()=>{
         const scene = new BABYLON.Scene(engine);
             
         const camera = new BABYLON.ArcRotateCamera("camera", -Math.PI / 2, Math.PI / 2.5, 15, new BABYLON.Vector3(0, 0, 0));
